# Task_Manager

./: CMakeLists.txt  databasemanager.cpp  databasemanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  taskdialog.cpp  taskdialog.h  taskdialog.ui  tasksqltablemodel.cpp  tasksqltablemodel.h
